# iphone-spotlight-indexing-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
.kiro/specs/iphone-spotlight-indexing-monitor/: .config.kiro  design.md  requirements.md  tasks.md
src/spotlight_monitor/: __init__.py  __main__.py  _paths.py  cli.py  config_manager.py  device_connector.py  indexing_monitor.py  log_filter.py  log_streamer.py  log_writer.py  models.py  output_display.py  progress_parser.py
tests/: test_config_manager_invalid_fallback_property.py  test_config_manager_missing.py  test_config_manager_properties.py  test_config_manager_roundtrip_property.py  test_device_connector_integration.py  test_indexing_monitor_hot_reload_property.py  test_indexing_monitor_run_unit.py  test_indexing_monitor_unit.py  test_log_filter_case_sensitivity_property.py  test_log_filter_default_keywords_property.py  test_log_filter_properties.py  test_log_streamer_integration.py  test_log_streamer_order_property.py  test_log_writer_export_property.py  test_log_writer_not_writable.py  test_log_writer_roundtrip_property.py  test_models.py  test_output_display_latest_progress_property.py  test_output_display_unit.py  test_progress_parser_normalize_property.py  test_progress_parser_roundtrip_property.py  test_timestamp_preservation_property.py
